--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 		<button id="button">Submit</button>
 
+		login form
+
 		<h1 id="#placeToSee"></h1>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
